set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE ON)



add_executable(main main.cpp)
add_executable(variables variables.cpp)
add_executable(sphere sphere.cpp)
add_executable(pointers_references pointers_references.cpp)
add_executable(scope scope.cpp)
add_executable(conditional conditional.cpp)
add_executable(specs specs.cpp)
add_executable(switch switch.cpp)
add_executable(for_loops for_loops.cpp)
add_executable(while_loop while_loop.cpp)